--- a/configs/dev.yaml
+++ b/configs/dev.yaml
@@ -17,22 +17,23 @@ train_generator_adversarially: False
 train_discriminator_adversarially: False
 train_discriminator_on_randn: True
 train_discriminator_on_noise: True
-generator_noise_level: 0.1 # -1 for wide range test
+generator_noise_level: 0.1
 generator_similarity_penalty: 0
 cut_max_prob_training_after: 1000
-extra_test_period: 1
+extra_test_period: 2
 sample_after_training: False
-sample_ind: 0
-sample_steps: 10
-sample_move_size: 0.05
-extra_test_set_paths: [ 'C:\Users\mikem\crystals/CSP_runs/datasets/blind_test_5_dataset',
-                        'C:\Users\mikem\crystals/CSP_runs/datasets/blind_test_6_dataset',
-                        'C:\Users\mikem\crystals/CSP_runs/datasets/blind_test_targets',
-                        'C:\Users\mikem\crystals/CSP_runs/datasets/test_dataset']
+extra_test_set_paths: [ 'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_5_dataset',
+                        'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_6_dataset',
+                       'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_targets']
                         #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_dataset',
                         #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_targets',]
-d_model_path: 'C:\Users\mikem\crystals\CSP_runs\models/cluster/discriminator_713'
-g_model_path: null #'C:\Users\mikem\Desktop\CSP_runs\models/cluster/generator_638'
+ #[ '/scratch/mk8347/csd_runs/datasets/blind_test_5_dataset',
+                        #'/scratch/mk8347/csd_runs/datasets/blind_test_6_dataset',
+                        #'/scratch/mk8347/csd_runs/datasets/blind_test_targets']
+                        #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_dataset',
+                        #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_targets',]
+d_model_path: null #'C:\Users\mikem\Desktop\CSP_runs\models/cluster/discriminator_150'
+g_model_path: null
 
 seeds:
   model: 0
@@ -41,7 +42,7 @@ seeds:
 # opt - sweep details
 wandb:
   sample_reporting_frequency: 1
-  experiment_tag: erratum_test
+  experiment_tag: 713_retest
   log_figures: True
   sweep_config_file: "sweep_test.yaml"
   sweep: False
@@ -49,21 +50,21 @@ wandb:
   sweep_num_runs: 50
 
 # batching & convergence
-auto_batch_sizing: False
-min_batch_size: 10
-max_batch_size: 10
-auto_batch_reduction: .4
-max_epochs: -1 # 0 epochs takes us straight to evaluation mode, -1 skips evaluation and goes straight to graphing
-history: 50
+auto_batch_sizing: True
+min_batch_size: 20
+max_batch_size: 1000
+auto_batch_reduction: 0.25
+max_epochs: 5000 # 0 epochs takes us straight to evaluation mode
+history: 1000
 
 # dataset curation
-target: packing # 'density' or 'packing' or 'volume'
-dataset_length: 1000000
+target: density # 'density' or 'packing' or 'volume'
+dataset_length: 1000
 feature_richness: full # full or minimal
 max_crystal_temperature: 1000
 min_crystal_temperature: -100
 max_num_atoms: 100
-min_num_atoms: 8 # target XVI has only 9 heavy atoms
+min_num_atoms: 4 # target XVI has only 9 heavy atoms
 max_z_value: 18
 min_z_value: 0
 max_z_prime: 1
@@ -76,7 +77,7 @@ max_atomic_number: 100
 exclude_missing_r_factor: False
 exclude_disordered_crystals: True
 exclude_polymorphs: True
-exclude_nonstandard_settings: False
+exclude_nonstandard_settings: True
 exclude_crystal_systems: null #['hexagonal','trigonal','rhombohedral']
 exclude_blind_test_targets: True
 include_sgs: null #["P-1", "P21/c", "P212121", "C2/c", "Pbca", "P21"]
@@ -90,23 +91,23 @@ supercell_size: 1 # 1 = 3x3x3, 2 = 5x5x5 etc. note 1 is too small for small mole
 discriminator:
   optimizer: "adamw"
   learning_rate: 0.0001
-  max_lr: 0.0001
+  max_lr: 0.001
   lr_schedule: True
   beta1: 0.9
   beta2: 0.999
   weight_decay: 0.001
   convergence_eps: 0.00001
-  training_period: 1
+  training_period: 1 # how often to train the discriminator
   positional_noise: 0 # scaling for the randn noise added to all atom positions
 
   graph_model: mike
   crystal_convolution_type: 2 # 1 - counts inter and intramolecular the same, 2 - separates intermolecular
   graph_convolution_layers: 4
-  graph_filters: 32
-  atom_embedding_size: 64
+  graph_filters: 128
+  atom_embedding_size: 256
   graph_norm: layer
   num_spherical: 6
-  num_radial: 12
+  num_radial: 36
   graph_convolution_cutoff: 6 # vdw direct force approx 6 angstrom
   max_num_neighbors: 100
   radial_function: 'bessel' # mikenet only
@@ -116,8 +117,8 @@ discriminator:
   add_torsional_basis: False #
   pooling: combo
 
-  num_fc_layers: 2
-  fc_depth: 128
+  num_fc_layers: 4
+  fc_depth: 256
   activation: leaky relu
   fc_dropout_probability: 0.1
   fc_norm_mode: layer
@@ -134,25 +135,25 @@ generator:
   convergence_eps: 0.00001
   positional_noise: 0 # scaling for the randn noise added to all atom positions
 
-  model_type: mlp # mlp or nf
+  model_type: nf # mlp or nf
   graph_model: mike
-  graph_convolution_layers: 2
-  graph_filters: 128
-  atom_embedding_size: 256
+  graph_convolution_layers: 1
+  graph_filters: 32
+  atom_embedding_size: 32
   graph_norm: null
   num_spherical: 6
-  num_radial: 50
-  graph_convolution_cutoff: 6
-  max_num_neighbors: 100
+  num_radial: 12
+  graph_convolution_cutoff: 5
+  max_num_neighbors: 32
   radial_function: 'bessel' # mikenet only
   num_attention_heads: 4 # mikenet self attention mode only - must evenly divide graph filters
-  graph_convolution: 'full message passing' # self attention, schnet, or full message passing
+  graph_convolution: 'self attention' # self attention, schnet, or full message passing
   add_spherical_basis: False # mikenet only
   add_torsional_basis: False
   pooling: combo
 
-  conditioner_num_fc_layers: 2
-  conditioner_fc_depth: 128
+  conditioner_num_fc_layers: 1
+  conditioner_fc_depth: 32
   conditioner_activation: leaky relu
   conditioner_fc_dropout_probability: 0
   conditioner_fc_norm_mode: null
@@ -172,4 +173,3 @@ generator:
   flow_depth: 16
   flow_basis_fns: 8
   flow_type: nsf_cl
-
