--- a/configs/713_retrain_17.yaml
+++ b/configs/713_retrain_17.yaml
@@ -1,10 +1,10 @@
-test_mode: True
-machine: "local"
+test_mode: False
+machine: "cluster"
 device: "cuda"
 skip_run_init: False
-explicit_run_enumeration: False
+explicit_run_enumeration: True
 skip_saving_and_loading: True
-run_num: 0
+run_num: 17
 anomaly_detection: False
 mode: gan # 'gan' or 'regression' or 'diagnostic'
 gan_loss: standard #wasserstein # standard #distance
@@ -20,16 +20,11 @@ train_discriminator_on_noise: True
 generator_noise_level: 0.1
 generator_similarity_penalty: 0
 cut_max_prob_training_after: 1000
-extra_test_period: 5
+extra_test_period: 2
 sample_after_training: False
-extra_test_set_paths: [ 'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_5_dataset',
-                        'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_6_dataset',
-                        'C:\Users\mikem\crystals\CSP_runs\datasets/blind_test_targets']
-                        #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_dataset',
-                        #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_targets',]
- #[ '/scratch/mk8347/csd_runs/datasets/blind_test_5_dataset',
-                        #'/scratch/mk8347/csd_runs/datasets/blind_test_6_dataset',
-                        #'/scratch/mk8347/csd_runs/datasets/blind_test_targets']
+extra_test_set_paths: [ '/scratch/mk8347/csd_runs/datasets/blind_test_5_dataset',
+                        '/scratch/mk8347/csd_runs/datasets/blind_test_6_dataset',
+                        '/scratch/mk8347/csd_runs/datasets/blind_test_targets']
                         #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_dataset',
                         #'C:/Users/mikem/Desktop/CSP_runs/datasets/bt_31_targets',]
 d_model_path: null #'C:\Users\mikem\Desktop\CSP_runs\models/cluster/discriminator_150'
@@ -42,7 +37,7 @@ seeds:
 # opt - sweep details
 wandb:
   sample_reporting_frequency: 1
-  experiment_tag: dev
+  experiment_tag: 713_retest_2
   log_figures: True
   sweep_config_file: "sweep_test.yaml"
   sweep: False
@@ -54,13 +49,13 @@ grow_batch_size: True
 min_batch_size: 10
 max_batch_size: 1000
 batch_growth_increment: 0.05
-max_epochs: 5 # 0 epochs takes us straight to evaluation mode
+max_epochs: 10000 # 0 epochs takes us straight to evaluation mode
 history: 1000
 gradient_norm_clip: 1
 
 # dataset curation
 target: density # 'density' or 'packing' or 'volume'
-dataset_length: 100
+dataset_length: 1000000
 feature_richness: full # full or minimal
 max_crystal_temperature: 1000
 min_crystal_temperature: -100
